# haskell-labs

haskell-lab2/: CHANGELOG.md  LICENSE  haskell-lab2.cabal
haskell-lab2/app/: Main.hs
haskell-lab2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-lab2/dist-newstyle/packagedb/ghc-9.6.7/: haskell-lab2-0.1.0.0-inplace.conf  package.cache
haskell-lab2/src/: Types.hs
haskell-lab2/src/IO/: Prompt.hs  RandomArray.hs
haskell-lab2/src/Sort/: Batcher.hs
haskell-lab3/: 100_paragraphs.txt  CHANGELOG.md  LICENSE  haskell-lab3.cabal
haskell-lab3/app/: Main.hs
haskell-lab3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-lab3/dist-newstyle/packagedb/ghc-9.6.7/: haskell-lab3-0.1.0.0-inplace.conf  package.cache
haskell-lab3/src/: TextProcessor.hs
haskell-lab3/src/TextProcessor/: Types.hs  Utils.hs
haskell-lab3/test/: Spec.hs
