cabal-version:   3.4
name:            haskell-lab2
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Vasyl Pavlyuchenko
maintainer:      vasyl.pavlyuchenko@gmail.com
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-lab2
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                      parallel,
                      vector,
                      random
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded
